troubleshoot file and remake

--- a/Test.nb.html
+++ b/Test.nb.html
@@ -2780,7 +2780,7 @@ $(document).ready(function () {
 <!-- code folding -->
 <script>
 $(document).ready(function () {
-  window.initializeSourceEmbed("DATA624_Project1.Rmd");
+  window.initializeSourceEmbed("Test.Rmd");
   window.initializeCodeFolding("show" === "show");
 });
 </script>
